# lambda-git

./: Cargo.toml  README.md  package.json  serverless.yml
aws-serverless-docker/: Dockerfile
src/: data.rs  main.rs  render_to_json.rs
