[package]
name = "lambda-git"
version = "0.1.0"
authors = ["Tomasz Cichocki <cichymail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.7"
tokio = { version = "0.2", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
http = "*"
git2 = "0.13"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"